top navigation mergin fix on mobile, payment driver settings bar responsive fix

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -2,3 +2,6 @@
   margin: 0 auto;
   width: 80%;
 } */
+mat-form-field.mat-form-field {
+  display: inline !important;
+}
